--- a/assets/backend/css/style.css
+++ b/assets/backend/css/style.css
@@ -104,3 +104,12 @@ body {
     border-color: transparent;
     box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
   }
+
+  .footer {
+    background-color: #272b30;
+    color: #fff;
+  }
+
+  #ft{
+    margin-left: 150px;
+  }
