Create loaisanphan, chudegopy on sidebar

--- a/templates/backend/layouts/includes/sidebar.html.twig
+++ b/templates/backend/layouts/includes/sidebar.html.twig
@@ -2,11 +2,57 @@
     <div class="sidebar-sticky">
         <ul class="nav flex-column">
             <li class="nav-item">
-                <a class="nav-link active" href="#">
+                <a class="nav-link active" href="/babyshop/backend/pages/dashboard.php">
                     <span data-feather="home"></span>
                     Bảng tin <span class="sr-only">(current)</span>
                 </a>
             </li>
+
+            <!-- Menu Loại sản phẩm -->
+            <li class="nav-item">
+                <a href="#loaisanphamSubMenu" data-toggle="collapse" aria-expanded="false" class="nav-link dropdown-toggle">
+                    <span data-feather="package"></span> Loại sản phẩm
+                </a>
+                <ul class="collapse" id="loaisanphamSubMenu">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/babyshop/backend/loaisanpham/index.php">
+                            <span data-feather="list"></span>
+                            Danh sách
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/babyshop/backend/loaisanpham/create.php">
+                            <span data-feather="plus"></span>
+                            Thêm mới
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <!-- End Menu Loại sản phẩm -->
+
+            <!-- Menu gop y -->
+            <li class="nav-item">
+                <a href="#loaisanphamSubMenu" data-toggle="collapse" aria-expanded="false" class="nav-link dropdown-toggle">
+                    <span data-feather="package"></span> Chủ để góp ý
+                </a>
+                <ul class="collapse" id="loaisanphamSubMenu">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/babyshop/backend/chudegopy/index.php">
+                            <span data-feather="list"></span>
+                            Danh sách
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/babyshop/backend/chudegopy/create.php">
+                            <span data-feather="plus"></span>
+                            Thêm mới
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <!-- End Menu gop y -->
+
+
         </ul>
     </div>
 </nav>
