--- a/templates/backend/chudegopy/edit.html.twig
+++ b/templates/backend/chudegopy/edit.html.twig
@@ -3,27 +3,27 @@
 
 {# Nội dung trong block title #}
 {% block title %}
-Thêm mới chủ đề góp ý
+Sửa Loại sản phẩm
 {% endblock %}
 {# End Nội dung trong block title #}
 
 {# Nội dung trong block headline #}
 {% block headline %}
-Thêm mới chủ đề góp ý
+Sửa Loại sản phẩm
 {% endblock %}
 {# End Nội dung trong block headline #}
 
 {# Nội dung trong block content #}
 {% block content %}
-<form name="frmGopY" id="frmGopY" method="post" action="/babyshop/backend/chudegopy/create.php">
+<form name="frmChudeGopy" id="frmChudeGopy" method="post" action="/babyshop/backend/chudegopy/edit.php?cdgy_ma={{ chudegopy.cdgy_ma }}">
     <div class="form-group">
-        <label for="cdgy_ma">Mã loại chủ để</label>
-        <input type="text" class="form-control" id="cdgy_ma" name="cdgy_ten" placeholder="Mã loại chủ để" readonly>
+        <label for="cdgy_ma">Mã loại chủ đề</label>
+        <input type="text" class="form-control" id="lsp_ma" name="lsp_ma" placeholder="Mã loại chủ đề" readonly value="{{ chudegopy.cdgy_ma }}">
         <small id="lsp_maHelp" class="form-text text-muted">Mã loại chủ đề không được hiệu chỉnh.</small>
     </div>
     <div class="form-group">
         <label for="cdgy_ten">Nội dung góp ý</label>
-        <input type="text" class="form-control" id="cdgy_ten" name="cdgy_ten" placeholder="Nội dung góp ý">
+        <input type="text" class="form-control" id="cdgy_ten" name="cdgy_ten" placeholder="Tên loại chủ đề" value="{{ chudegopy.cdgy_ten }}">
     </div>
     <button class="btn btn-primary" name="btnCapNhat">Cập nhật</button>
 </form>
