--- a/templates/backend/chudegopy/index.html.twig
+++ b/templates/backend/chudegopy/index.html.twig
@@ -3,13 +3,13 @@
 
 {# Nội dung trong block title #}
 {% block title %}
-Danh sách Loại sản phẩm
+Danh sách chủ đề góp ý
 {% endblock %}
 {# End Nội dung trong block title #}
 
 {# Nội dung trong block headline #}
 {% block headline %}
-Danh sách Loại sản phẩm
+Danh sách Loại chủ đề
 {% endblock %}
 {# End Nội dung trong block headline #}
 
