Create new hinhsanpham, sanpham...

--- a/templates/backend/hinhsanpham/index.html.twig
+++ b/templates/backend/hinhsanpham/index.html.twig
@@ -3,13 +3,13 @@
 
 {# Nội dung trong block title #}
 {% block title %}
-Chủ đề góp ý
+Danh sách Hình Sản phẩm
 {% endblock %}
 {# End Nội dung trong block title #}
 
 {# Nội dung trong block headline #}
 {% block headline %}
-Danh sách chủ đề góp ý
+Danh sách Hình Sản phẩm
 {% endblock %}
 {# End Nội dung trong block headline #}
 
@@ -22,24 +22,28 @@ Danh sách chủ đề góp ý
 <table class="table table-bordered table-hover mt-2">
     <thead class="thead-dark">
         <tr>
-            <th>Mã Chủ đề</th>
-            <th>Nội dung góp ý</th>
+            <th>Mã Hình Sản phẩm</th>
+            <th>Hình ảnh</th>
+            <th>Sản phẩm</th>
             <th>Hành động</th>
         </tr>
     </thead>
     <tbody>
-        {% for chudegopy in ds_chudegopy %}
+        {% for hinhsanpham in ds_hinhsanpham %}
         <tr>
-            <td>{{ chudegopy.cdgy_ma }}</td>
-            <td>{{ chudegopy.cdgy_ten }}</td>
+            <td>{{ hinhsanpham.hsp_ma }}</td>
             <td>
-                <!-- Nút sửa, bấm vào sẽ hiển thị form hiệu chỉnh thông tin dựa vào khóa chính `lsp_ma` -->
-                <a href="edit.php?cdgy_ma={{ chudegopy.cdgy_ma }}" class="btn btn-warning">
+                <img src="/babyshop/assets/uploads/{{ hinhsanpham.hsp_tentaptin }}" class="img-fluid" width="100px"/>
+            </td>
+            <td>{{ hinhsanpham.sp_tomtat }}</td>
+            <td>
+                <!-- Nút sửa, bấm vào sẽ hiển thị form hiệu chỉnh thông tin dựa vào khóa chính `hsp_ma` -->
+                <a href="edit.php?hsp_ma={{ hinhsanpham.hsp_ma }}" class="btn btn-warning">
                     <span data-feather="edit"></span> Sửa
                 </a>
 
-                <!-- Nút xóa, bấm vào sẽ xóa thông tin dựa vào khóa chính `lsp_ma` -->
-                <a href="delete.php?cdgy_ma={{ chudegopy.cdgy_ma }}" class="btn btn-danger">
+                <!-- Nút xóa, bấm vào sẽ xóa thông tin dựa vào khóa chính `sp_ma` -->
+                <a href="delete.php?hsp_ma={{ hinhsanpham.hsp_ma }}" class="btn btn-danger">
                     <span data-feather="delete"></span> Xóa
                 </a>
             </td>
