--- a/templates/backend/layouts/layout.html.twig
+++ b/templates/backend/layouts/layout.html.twig
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/babyshop/assets/backend/css/style.css" type="text/css" />
 
     <!-- Block title - Đục lỗ trên giao diện bố cục chung, đặt tên là `title` -->
-    <title>Nền tảng - Kiến thức cơ bản về WEB | 
+    <title>PHP - Kiến thức cơ bản về WEB | 
         {% block title %}
         {% endblock %}
     </title>
