--- a/templates/backend/layouts/includes/sidebar.html.twig
+++ b/templates/backend/layouts/includes/sidebar.html.twig
@@ -32,10 +32,10 @@
 
             <!-- Menu gop y -->
             <li class="nav-item">
-                <a href="#loaisanphamSubMenu" data-toggle="collapse" aria-expanded="false" class="nav-link dropdown-toggle">
+                <a href="#gopySubMenu" data-toggle="collapse" aria-expanded="false" class="nav-link dropdown-toggle">
                     <span data-feather="package"></span> Chủ để góp ý
                 </a>
-                <ul class="collapse" id="loaisanphamSubMenu">
+                <ul class="collapse" id="gopySubMenu">
                     <li class="nav-item">
                         <a class="nav-link" href="/babyshop/backend/chudegopy/index.php">
                             <span data-feather="list"></span>
@@ -51,6 +51,50 @@
                 </ul>
             </li>
             <!-- End Menu gop y -->
+
+            <!-- Menu san pham -->
+            <li class="nav-item">
+                    <a href="#sanphamSubMenu" data-toggle="collapse" aria-expanded="false" class="nav-link dropdown-toggle">
+                        <span data-feather="package"></span> Sản phẩm
+                    </a>
+                    <ul class="collapse" id="sanphamSubMenu">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/babyshop/backend/sanpham/index.php">
+                                <span data-feather="list"></span>
+                                Danh sách
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/babyshop/backend/sanpham/create.php">
+                                <span data-feather="plus"></span>
+                                Thêm mới
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <!-- End Menu sanpham -->
+
+                <!-- Menu Hình Sản phẩm -->
+                <li class="nav-item">
+                    <a href="#hinhsanphamSubMenu" data-toggle="collapse" aria-expanded="false" class="nav-link dropdown-toggle">
+                        <span data-feather="package"></span> Hình sản phẩm
+                    </a>
+                    <ul class="collapse" id="hinhsanphamSubMenu">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/babyshop/backend/hinhsanpham/index.php">
+                                <span data-feather="list"></span>
+                                Danh sách
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/babyshop/backend/hinhsanpham/create.php">
+                                <span data-feather="plus"></span>
+                                Thêm mới
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <!-- End Menu Hình Sản phẩm -->
 
 
         </ul>
