--- a/templates/backend/layouts/includes/header.html.twig
+++ b/templates/backend/layouts/includes/header.html.twig
@@ -1,10 +1,37 @@
-<nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">ABC_Shop</a>
-    <input class="form-control form-control-dark w-100" type="text" placeholder="Tìm kiếm" aria-label="Search">
-    <ul class="navbar-nav px-3">
-        <li class="nav-item text-nowrap">
-            <a class="nav-link" href="#">Đăng xuất</a>
-        </li>
-        
-    </ul>
-</nav>
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="https://nentang.vn">Nền tảng</a>
+            <div class="navbar-collapse collapse" id="navbarCollapse" style="">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/babyshop">Trang chủ <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/babyshop/backend/pages/dashboard">Quản trị</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/babyshop/frontend/sanpham/danhsach">Sản phẩm</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/babyshop/frontend/pages/gioithieu">Giới thiệu</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/babyshop/frontend/pages/lienhe">Liên hệ</a>
+                    </li>
+                </ul>
+                <form class="form-inline mt-2 mt-md-0" method="get" action="/babyshop/frontend/pages/timkiem">
+                    <input class="form-control mr-sm-2" type="text" placeholder="Tìm kiếm" aria-label="Search" name="keyword_tensanpham">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Tìm kiếm</button>
+                </form>
+            </div>
+            <ul class="navbar-nav px-3">
+                <li class="nav-item text-nowrap">
+                    <a class="nav-link" href="/babyshop/frontend/thanhtoan/giohang">Giỏ hàng</a>
+                </li>
+                <li class="nav-item text-nowrap">
+                                    <!-- Nếu chưa đăng nhập thì hiển thị nút Đăng nhập -->
+                    <a class="nav-link" href="/babyshop/backend/pages/login.php">Đăng nhập</a>
+                                </li>
+            </ul>
+        </div>
+    </nav>
