--- a/templates/backend/layouts/includes/header.html.twig
+++ b/templates/backend/layouts/includes/header.html.twig
@@ -31,6 +31,12 @@
                 <li class="nav-item text-nowrap">
                     {% if session['username'] %}
                     <!-- Nếu đã đăng nhập thì hiển thị nút Đăng xuất -->
+                    <a class="nav-link" href="#">@{{session['username']}}</a>
+                    {% endif %}
+                </li>
+                <li class="nav-item text-nowrap">
+                    {% if session['username'] %}
+                    <!-- Nếu đã đăng nhập thì hiển thị nút Đăng xuất -->
                     <a class="nav-link" href="/babyshop/backend/pages/logout.php">Đăng xuất</a>
                     {% else %}
                     <!-- Nếu chưa đăng nhập thì hiển thị nút Đăng nhập -->
