--- a/templates/backend/layouts/layout.html.twig
+++ b/templates/backend/layouts/layout.html.twig
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="vi" class="h-100">
+<html lang="vi">
 
 <head>
     <!-- Required meta tags -->
@@ -10,26 +10,41 @@
     <link rel="stylesheet" href="/babyshop/assets/vendor/bootstrap/css/bootstrap.min.css" type="text/css" />
 
     <!-- Custom css - Các file css do chúng ta tự viết -->
-    <link rel="stylesheet" href="/babyshop/assets/backend/css/style.css" type="text/css" />
+    <link rel="stylesheet" href="/babyshop/assets/frontend/css/style.css" type="text/css" />
 
     <!-- Block title - Đục lỗ trên giao diện bố cục chung, đặt tên là `title` -->
-    <title>PHP - Kiến thức cơ bản về WEB | 
+    <title>Nền tảng - Kiến thức cơ bản về WEB | 
         {% block title %}
         {% endblock %}
     </title>
     <!-- End block title -->
 </head>
 
-<body class="d-flex flex-column h-100">
-    <!-- header -->
-    {{ include('backend/layouts/includes/header.html.twig') }}
-    <!-- end header -->
+<body>
+    <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
+        <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Nền tảng</a>
+        <input class="form-control form-control-dark w-100" type="text" placeholder="Tìm kiếm" aria-label="Search">
+        <ul class="navbar-nav px-3">
+            <li class="nav-item text-nowrap">
+                <a class="nav-link" href="#">Đăng xuất</a>
+            </li>
+        </ul>
+    </nav>
 
     <div class="container-fluid">
         <div class="row">
-            <!-- sidebar -->
-            {{ include('backend/layouts/includes/sidebar.html.twig') }}
-            <!-- end sidebar -->
+            <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+                <div class="sidebar-sticky">
+                    <ul class="nav flex-column">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">
+                                <span data-feather="home"></span>
+                                Bảng tin <span class="sr-only">(current)</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
 
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
                 <div
@@ -55,22 +70,8 @@
     <script src="/babyshop/assets/vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="/babyshop/assets/vendor/feather/feather.min.js"></script>
 
-    <!-- jquery-validation -->
-    <script src="/babyshop/assets/vendor/jquery-validation/jquery.validate.min.js"></script>
-    <script src="/babyshop/assets/vendor/jquery-validation/localization/messages_vi.min.js"></script>        
-
     <!-- Custom script - Các file js do mình tự viết -->
-    <script src="/babyshop/assets/backend/js/app.js"></script>
-
-    <!-- footer -->
-    {{ include('backend/layouts/includes/footer.html.twig') }}
-    <!-- end footer -->
-
-    <!-- Block custom-scripts - Đục lỗ trên giao diện bố cục chung, đặt tên là `custom-scripts` -->
-    {% block customscripts %}
-    {% endblock %}
-    <!-- End block custom-scripts -->
-
+    <script src="/babyshop/assets/frontend/js/app.js"></script>
 </body>
 
 </html>
