--- a/templates/frontend/layouts/layout.html.twig
+++ b/templates/frontend/layouts/layout.html.twig
@@ -16,8 +16,8 @@
     <!--<link rel="stylesheet" href="/babyshop/assets/frontend/css/style.css" type="text/css" />
 -->
     <!-- Custom fonts for this template -->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-    <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
+    <link href="/babyshop/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+    <link href="/babyshop/vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- Custom styles for this template -->
@@ -41,10 +41,10 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-              <a class="nav-item nav-link active" href="#">Trang chủ <span class="sr-only">(current)</span></a>
+              <a class="nav-item nav-link active" href="home.php">Trang chủ <span class="sr-only">(current)</span></a>
               <a class="nav-item nav-link" href="#">Sản phẩm</a>
               <a class="nav-item nav-link" href="#">Liên hệ</a>
-              <a class="nav-item nav-link" href="#">Đăng nhập</a>
+              <a class="nav-item nav-link" href="login.php">Đăng nhập</a>
               </div>
           </div>
       
@@ -54,115 +54,13 @@
           </form>
       </nav>
       
-        <!-- Masthead -->
-        <header class="masthead text-white text-center">
-          <div class="overlay"></div>
-          <div class="container">
-            <div class="row">
-              <div class="col-xl-9 mx-auto">
-                <h1 class="mb-5">Trang thông tin 4.0</h1>
-              </div>
-              <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-                <form>
-                  <div class="form-row">
-                    <div class="col-12 col-md-9 mb-2 mb-md-0">
-                      <input type="email" class="form-control form-control-lg" placeholder="Email của bạn...">
-                    </div>
-                    <div class="col-12 col-md-3">
-                      <button type="submit" class="btn btn-block btn-lg btn-primary">Đăng nhập!</button>
-                    </div>
-                  </div>
-                </form>
-              </div>
-            </div>
-          </div>
-        </header>
-      
-      
-        <!-- Image Showcases -->
-        <section class="showcase">
-          <div class="container-fluid p-0">
-            <div class="row no-gutters">
-      
-              <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('/babyshop/img/bg-showcase-1.jpg');"></div>
-              <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-                <h2>Mobile</h2>
-                <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
-              </div>
-            </div>
-            <div class="row no-gutters">
-              <div class="col-lg-6 text-white showcase-img" style="background-image: url('/babyshop/img/bg-showcase-2.jpg');"></div>
-              <div class="col-lg-6 my-auto showcase-text">
-                <h2>PC & Laptop</h2>
-                <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
-              </div>
-            </div>
-            <div class="row no-gutters">
-              <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('/babyshop/img/bg-showcase-3.jpg');"></div>
-              <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-                <h2>Others</h2>
-                <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
-              </div>
-            </div>
-          </div>
-        </section>
-      
-        <!-- Testimonials -->
-        <section class="testimonials text-center bg-light">
-          <div class="container">
-            <h2 class="mb-5">What people are saying...</h2>
-            <div class="row">
-              <div class="col-lg-4">
-                <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                  <img class="img-fluid rounded-circle mb-3" src="/babyshop/img/testimonials-1.jpg" alt="">
-                  <h5>Margaret E.</h5>
-                  <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p>
-                </div>
-              </div>
-              <div class="col-lg-4">
-                <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                  <img class="img-fluid rounded-circle mb-3" src="/babyshop/img/testimonials-2.jpg" alt="">
-                  <h5>Fred S.</h5>
-                  <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p>
-                </div>
-              </div>
-              <div class="col-lg-4">
-                <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                  <img class="img-fluid rounded-circle mb-3" src="/babyshop/img/testimonials-3.jpg" alt="">
-                  <h5>Sarah W.</h5>
-                  <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
-      
-        <!-- Call to Action -->
-        <section class="call-to-action text-white text-center">
-          <div class="overlay"></div>
-          <div class="container">
-            <div class="row">
-              <div class="col-xl-9 mx-auto">
-                <h2 class="mb-4">Đăng ký tài khoản!</h2>
-              </div>
-              <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-                <form>
-                  <div class="form-row">
-                    <div class="col-12 col-md-9 mb-2 mb-md-0">
-                      <input type="email" class="form-control form-control-lg" placeholder="Nhập email...">
-                    </div>
-                    <div class="col-12 col-md-3">
-                      <button type="submit" class="btn btn-block btn-lg btn-primary">Đăng ký!</button>
-                    </div>
-                  </div>
-                </form>
-              </div>
-            </div>
-          </div>
-        </section>
-      
+      <!-- Block content - Đục lỗ trên giao diện bố cục chung, đặt tên là `content` -->
+      {% block content %}
+      {% endblock %}
+      <!-- End block content -->
+
         <!-- Footer -->
-        <footer class="footer bg-light">
+        <footer class="footer bg-light" style="padding: 30px;">
           <div class="container">
             <div class="row">
               <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
@@ -185,6 +83,7 @@
                 </ul>
                 <p class="text-muted small mb-4 mb-lg-0">&copy; Hoàng Quý - 2019</p>
               </div>
+
               <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
                 <ul class="list-inline mb-0">
                   <li class="list-inline-item mr-3">
@@ -220,6 +119,10 @@
     <!-- Custom script - Các file js do mình tự viết -->
     <script src="/babyshop/assets/frontend/js/app.js"></script>
 
+    <!-- Block custom-scripts - Đục lỗ trên giao diện bố cục chung, đặt tên là `custom-scripts` -->
+    <!--{% block customscripts %}
+    {% endblock %}-->
+    <!-- End block custom-scripts -->
 
 </body>
 
