--- a/templates/backend/pages/login.html.twig
+++ b/templates/backend/pages/login.html.twig
@@ -43,9 +43,7 @@
     <!-- end header -->
 
     <div class="container-fluid" style="margin-top: 100px;">
-            {% if loidangnhap %}
-                <h1>{{loidangnhap}}</h1>
-            {% endif %}  
+            
 
 
     <!-- Block content - Đục lỗ trên giao diện bố cục chung, đặt tên là `content` -->
@@ -57,6 +55,9 @@
                         <div class="card p-4">
                             <div class="card-body">
                                 <h1>Đăng nhập</h1>
+                                {% if loidangnhap %}
+                                <small style="color: red;">{{loidangnhap}}</small>
+                                {% endif %}
                                 <p class="text-muted">Nhập thông tin Tài khoản</p>
                                 <div class="input-group mb-3">
                                     <div class="input-group-prepend">
