--- a/templates/frontend/pages/aboutus.html.twig
+++ b/templates/frontend/pages/aboutus.html.twig
@@ -3,13 +3,13 @@
 
 {# Nội dung trong block title #}
 {% block title %}
-Login
+AboutUs
 {% endblock %}
 {# End Nội dung trong block title #}
 
 {# Nội dung trong block headline #}
 {% block headline %}
-Đăng nhập
+Ve chung toi
 {% endblock %}
 {# End Nội dung trong block headline #}
 
@@ -17,7 +17,6 @@ Login
 {% block content %}
 <!-- Masthead -->
 <header class="masthead text-white text-center">
-
     {% if errors %}
     <div id="thongbao" class="alert alert-danger face" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -32,26 +31,23 @@ Login
         </ul>
     </div>
     {% endif %}
-
     <div class="overlay"></div>
     
     <div class="container">
         <div class="row">
             <div class="col-xl-9 mx-auto">
-                <form class="mx-auto" name="frmdangnhapF" id="frmdangnhapF" method="POST" action="/babyshop/frontend/pages/login.php" style="background: white; padding: 0px 20px 0px 20px; width: 350px; border-radius: 8px;">
+                <form class="mx-auto" name="frmdangnhap" id="frmdangnhap" method="POST" action="/babyshop/frontend/pages/login.php" style="background: white; padding: 0px 20px 0px 20px; width: 350px; border-radius: 8px;">
                 <div class="form-row" style="height: 20px;"></div>
                 <div class="form-row">
                     <div class="col-12 col-md-12 mb-2 mb-md-0">
-                        <h2 style="color: blue; font-family: 'Times New Roman', Times, serif; font-weight: bold;">Đăng nhập</h2>
+                        <h2 style="color: blue; font-family: 'Times New Roman', Times, serif; font-weight: bold;">About us</h2>
                     </div>
                 </div>
                 <div class="form-row" style="height: 20px;"></div>
                 
                     <div class="container" style="text-align: left; color:red;">
                         {% if loidangnhap %}
-                        <small style="color: red; font-style: italic;">
-                            {{loidangnhap}}
-                        </small>
+                        <a><i>{{loidangnhap}}</i></a>
                         {% endif %}
                     </div>
                 
@@ -95,26 +91,16 @@ Login
     </div>
 </header>
 
-<!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="/babyshop/assets/vendor/jquery/jquery.min.js"></script>
-    <script src="/babyshop/assets/vendor/popperjs/popper.min.js"></script>
-    <script src="/babyshop/assets/vendor/bootstrap/js/bootstrap.min.js"></script>
-    <script src="/babyshop/assets/vendor/feather/feather.min.js"></script>
-
 <!-- jquery-validation -->
-<script src="/babyshop/assets/vendor/jquery-validation/jquery.validate.min.js"></script>
-<script src="/babyshop/assets/vendor/jquery-validation/localization/messages_vi.min.js"></script>
-
-<!-- Custom script - Các file js do mình tự viết -->
-<script src="/babyshop/assets/frontend/js/app.js"></script>
+<script src="../../../babyshop/assets/vendor/jquery-validation/jquery.validate.min.js"></script>
+<script src="../../../babyshop/assets/vendor/jquery-validation/localization/messages_vi.min.js"></script>
 
 <!-- Block custom-scripts - Đục lỗ trên giao diện bố cục chung, đặt tên là `custom-scripts` -->
 <!-- End block custom-scripts -->
 
 <script>
     $(document).ready(function () {
-        $("#frmdangnhapF").validate({
+        $("#frmdangnhap").validate({
             rules: {
                 username: {
                     required: true,
