create product page on frontend

--- a/templates/frontend/layouts/layout.html.twig
+++ b/templates/frontend/layouts/layout.html.twig
@@ -42,7 +42,7 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
               <a class="nav-item nav-link active" href="home.php">Trang chủ <span class="sr-only">(current)</span></a>
-              <a class="nav-item nav-link" href="#">Sản phẩm</a>
+              <a class="nav-item nav-link" href="product.php">Sản phẩm</a>
               <a class="nav-item nav-link" href="aboutus.php">Liên hệ</a>
               
             {% if session['username'] %}
