--- a/templates/frontend/pages/product.html.twig
+++ b/templates/frontend/pages/product.html.twig
@@ -15,56 +15,56 @@ Login
 
 {# Nội dung trong block content #}
 {% block content %}
-<div style="height: 60px;"></div>
-<table class="table table-bordered table-hover mt-2">
-        <thead class="thead-dark">
-            <tr>
-                <th>Mã Sản phẩm</th>
-                <th>Tên Sản phẩm</th>
-                <th>Giá</th>
-                <th>Giá cũ</th>
-                <th>Mô tả</th>
-                <th>Ngày cập nhật</th>
-                <th>Số lượng</th>
-                <th>Loại sản phẩm</th>
-                <th>Nhà sản xuất</th>
-                <th>Khuyến mãi</th>
-                <th>Hành động</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for sanpham in ds_sanpham %}
-            <tr>
-                <td>{{ sanpham.sp_ma }}</td>
-                <td>{{ sanpham.sp_ten }}</td>
-                <td>{{ sanpham.sp_gia }}</td>
-                <td>{{ sanpham.sp_giacu }}</td>
-                <td>
-                    {{ sanpham.sp_mota_ngan }}
+<style type="text/css">
+    .myproduct{
+        margin: 10px 1px 10px 1px;
+        padding: 5px 5px 5px 5px;
+        background:khaki;
+        border: 1px darkolivegreen black;
+        border-radius: 10px;
+        box-shadow: 5px 5px 5px #666;
+    }
+
+    div{
+        /* background:lightsteelblue; */
+    }
+</style>
+
+<div style="height: 100px;"></div>
+<div>
+
+
+<div class="container">
+    <div class="row">
+    {% for hinhsanpham in ds_hinhsanpham %}
+        <div class="col-md-4">
+        <div class="myproduct">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="mx-auto row productImg">
+                        <img style="height: 100px; width: 90px;" src="/babyshop/assets/uploads/{{ hinhsanpham.hsp_tentaptin }}" class="img-fluid" width="100px"/>
+                    </div>
+                    <div class="row mx-auto">
+                        <span style="color: red;"><small><b>{{ hinhsanpham.sp_gia }}</b></small></span>
+                    </div>
+                    
+                </div>
+                <div class="col-md-8">
+                    <b>{{ hinhsanpham.sp_ten }}</b><br/>
+                    {{ hinhsanpham.sp_mota_ngan }}<br/>
                     <p>
-                        {{ sanpham.sp_mota_chitiet }}
+                        {{ hinhsanpham.sp_mota_chitiet }}
                     </p>
-                </td>
-                <td>{{ sanpham.sp_ngaycapnhat }}</td>
-                <td>{{ sanpham.sp_soluong }}</td>
-                <td>{{ sanpham.lsp_ten }}</td>
-                <td>{{ sanpham.nsx_ten }}</td>
-                <td>{{ sanpham.km_tomtat }}</td>
-                <td>
-                    <!-- Nút sửa, bấm vào sẽ hiển thị form hiệu chỉnh thông tin dựa vào khóa chính `sp_ma` -->
-                    <a href="edit.php?sp_ma={{ sanpham.sp_ma }}" class="btn btn-warning">
-                        <span data-feather="edit"></span> Sửa
-                    </a>
-    
-                    <!-- Nút xóa, bấm vào sẽ xóa thông tin dựa vào khóa chính `sp_ma` -->
-                    <a href="delete.php?sp_ma={{ sanpham.sp_ma }}" class="btn btn-danger">
-                        <span data-feather="delete"></span> Xóa
-                    </a>
-                </td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+                </div>
+            </div>
+        </div>
+        </div>
+    {% endfor %}
+    </div>
+</div>
+</div>
+
+
 
 <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
