- config validate login form on frontend - modify product with css - modify aboutus page on frontend.

--- a/templates/frontend/pages/login.html.twig
+++ b/templates/frontend/pages/login.html.twig
@@ -95,13 +95,13 @@ Login
     </div>
 </header>
 
-<!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="/babyshop/assets/vendor/jquery/jquery.min.js"></script>
-    <script src="/babyshop/assets/vendor/popperjs/popper.min.js"></script>
-    <script src="/babyshop/assets/vendor/bootstrap/js/bootstrap.min.js"></script>
-    <script src="/babyshop/assets/vendor/feather/feather.min.js"></script>
 
+
+{% endblock %}
+{# End Nội dung trong block content #}
+
+
+{% block customscripts %}
 <!-- jquery-validation -->
 <script src="/babyshop/assets/vendor/jquery-validation/jquery.validate.min.js"></script>
 <script src="/babyshop/assets/vendor/jquery-validation/localization/messages_vi.min.js"></script>
@@ -170,6 +170,4 @@ Login
         });
     });
 </script>
-
 {% endblock %}
-{# End Nội dung trong block content #}
