--- a/templates/frontend/layouts/layout.html.twig
+++ b/templates/frontend/layouts/layout.html.twig
@@ -76,15 +76,15 @@
               <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
                 <ul class="list-inline mb-2">
                   <li class="list-inline-item">
-                    <a href="#">Trang chủ</a>
+                    <a href="home.php">Trang chủ</a>
                   </li>
                   <li class="list-inline-item">&sdot;</li>
                   <li class="list-inline-item">
-                    <a href="#">Sản phẩm</a>
+                    <a href="product.php">Sản phẩm</a>
                   </li>
                   <li class="list-inline-item">&sdot;</li>
                   <li class="list-inline-item">
-                    <a href="#">Liên hệ</a>
+                    <a href="aboutus.php">Liên hệ</a>
                   </li>
                   <li class="list-inline-item">&sdot;</li>
                   <li class="list-inline-item">
