--- a/templates/frontend/pages/aboutus.html.twig
+++ b/templates/frontend/pages/aboutus.html.twig
@@ -15,147 +15,38 @@ Ve chung toi
 
 {# Nội dung trong block content #}
 {% block content %}
-<!-- Masthead -->
-<header class="masthead text-white text-center">
-    {% if errors %}
-    <div id="thongbao" class="alert alert-danger face" role="alert">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
-        <ul>
-            {% for fields in errors %}
-                {% for field in fields %}
-                <li>{{ field.msg }}</li>
-                {% endfor %}
-            {% endfor %}
-        </ul>
-    </div>
-    {% endif %}
-    <div class="overlay"></div>
-    
-    <div class="container">
-        <div class="row">
-            <div class="col-xl-9 mx-auto">
-                <form class="mx-auto" name="frmdangnhap" id="frmdangnhap" method="POST" action="/babyshop/frontend/pages/login.php" style="background: white; padding: 0px 20px 0px 20px; width: 350px; border-radius: 8px;">
-                <div class="form-row" style="height: 20px;"></div>
-                <div class="form-row">
-                    <div class="col-12 col-md-12 mb-2 mb-md-0">
-                        <h2 style="color: blue; font-family: 'Times New Roman', Times, serif; font-weight: bold;">About us</h2>
-                    </div>
+
+<style type="text/css">
+    div{
+        /* border: 1px dotted blue; */
+    }
+
+    @media (min-width: 768px) {
+        .mymap {
+            height: 420px;
+        }
+    }
+    @media (max-width: 765px) {
+        .mymap {
+            height: 300px;
+        }
+    }
+</style>
+
+<div style="height: 100px;"></div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">noi dung gioi thieu</div>
+        <div class="col-md-6">
+                <div id="map">
+                        <iframe class="mymap" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3928.64859793234!2d105.78714431384577!3d10.045828392819752!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31a062af21cb49c7%3A0xff6770616331b95b!2sCafe+Fooball!5e0!3m2!1sen!2s!4v1564407973123!5m2!1sen!2s" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
-                <div class="form-row" style="height: 20px;"></div>
-                
-                    <div class="container" style="text-align: left; color:red;">
-                        {% if loidangnhap %}
-                        <a><i>{{loidangnhap}}</i></a>
-                        {% endif %}
-                    </div>
-                
-                <div class="form-row">
-                    <div class="input-group col-12 col-md-12 mb-2 mb-md-0">
-                            <div class="input-group-prepend">
-                                    <span class="input-group-text">
-                                        <i class="icon-user"></i>
-                                    </span>
-                                </div>
-                        <input type="text" id="username" name="username" class="form-control form-control-md" placeholder="Username">
-                    </div>
-                </div>
-                <div class="form-row" style="height: 10px;"></div>
-                <div class="form-row">
-                    <div class="input-group col-12 col-md-12 mb-2 mb-md-0">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text">
-                                <i class="icon-lock"></i>
-                            </span>
-                        </div>
-                        <input type="password" name="password" class="form-control form-control-md" placeholder="Password">
-                    </div>
-                </div>
-                <div class="form-row" style="height: 15px;"></div>
-                
-                <div class="form-row">
-                    <div class="col-12 col-md-6">
-                        <button type="submit" name="btnDangNhap" class="btn btn-block btn-md btn-primary">Đăng nhập</button>
-                    </div>
-                    <div class="col-12 col-md-6">
-                        <div class="txt" style="height: 100%; padding-top: 6px;">
-                            <a href="#">Quên mật khẩu!</a>
-                        </div>
-                    </div>    
-                </div>
-                <div class="form-row" style="height: 20px;"></div>
-                </form>
-            </div>
+            <!-- <div>https://goo.gl/maps/gqXDU1tb5WYrXJam8</div> -->
         </div>
     </div>
-</header>
+</div>
 
-<!-- jquery-validation -->
-<script src="../../../babyshop/assets/vendor/jquery-validation/jquery.validate.min.js"></script>
-<script src="../../../babyshop/assets/vendor/jquery-validation/localization/messages_vi.min.js"></script>
-
-<!-- Block custom-scripts - Đục lỗ trên giao diện bố cục chung, đặt tên là `custom-scripts` -->
-<!-- End block custom-scripts -->
-
-<script>
-    $(document).ready(function () {
-        $("#frmdangnhap").validate({
-            rules: {
-                username: {
-                    required: true,
-                    minlength: 3,
-                    maxlength: 50
-                },
-                password: {
-                    required: true,
-                    minlength: 3,
-                    maxlength: 50
-                }
-            },
-            messages: {
-                username: {
-                    required: "Vui lòng nhập Username",
-                    minlength: "Username phải có ít nhất 3 ký tự",
-                    maxlength: "Username không được vượt quá 50 ký tự"
-                },
-                password: {
-                    required: "Vui lòng nhập password",
-                    minlength: "Password phải có ít nhất 3 ký tự",
-                    maxlength: "Password không được vượt quá 50 ký tự"
-                },
-            },
-            errorElement: "em",
-            errorPlacement: function (error, element) {
-                // Thêm class `invalid-feedback` cho field đang có lỗi
-                error.addClass("invalid-feedback");
-                if (element.prop("type") === "checkbox") {
-                    error.insertAfter(element.parent("label"));
-                } else {
-                    error.insertAfter(element);
-                }
-                // Thêm icon "Kiểm tra không Hợp lệ"
-                if (!element.next("span")[0]) {
-                    $("<span class='glyphicon glyphicon-remove form-control-feedback'></span>")
-                        .insertAfter(element);
-                }
-            },
-            success: function (label, element) {
-                // Thêm icon "Kiểm tra Hợp lệ"
-                if (!$(element).next("span")[0]) {
-                    $("<span class='glyphicon glyphicon-ok form-control-feedback'></span>")
-                        .insertAfter($(element));
-                }
-            },
-            highlight: function (element, errorClass, validClass) {
-                $(element).addClass("is-invalid").removeClass("is-valid");
-            },
-            unhighlight: function (element, errorClass, validClass) {
-                $(element).addClass("is-valid").removeClass("is-invalid");
-            }
-        });
-    });
-</script>
 
 {% endblock %}
 {# End Nội dung trong block content #}
+
